# game_commerce_website

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  run.py
frontend/: main.py
frontend/database/: distinct_genres.txt  ingest_games.py
frontend/src/cart_page/: __init__.py
frontend/src/database/: utils.py
frontend/src/game_page/: utils.py
frontend/src/index/: utils.py
frontend/src/search/: constants.py  utils.py
frontend/templates/: admin_add_game_user.html  admin_dashboard.html  admin_notification_management.html  admin_remove_game.html  admin_user_management.html  admin_user_settings.html  base.html  cheack.html  check.html  continue_payment.html  game_detail.html  index.html  publisher_add_new_game.html  publisher_dashboard.html  publisher_setting.html  search.html  signin_page.html  signup_page.html
