[tool.poetry]
name = "freelance-game-commerce-website"
version = "0.1.0"
description = ""
authors = ["boltuzamaki <divyanshuboltuzamaki23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
