[tool.poetry]
name = "freelance-game-commerce-website"
version = "0.1.0"
description = ""
authors = ["boltuzamaki <divyanshuboltuzamaki23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
tqdm = "^4.66.5"
flask-sqlalchemy = "^3.1.1"
flask-bcrypt = "^1.0.1"
flask-login = "^0.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
